--- a/assets/style/_about.scss
+++ b/assets/style/_about.scss
@@ -54,7 +54,7 @@
         top: 0;
         width: 20px;
         height: 20px;
-        background: url("../image/quotation.svg") center center / cover
+        background: url("../images/quotation.svg") center center / cover
           no-repeat;
       }
       &:before {
