--- a/assets/style/_achievements.scss
+++ b/assets/style/_achievements.scss
@@ -51,10 +51,10 @@
 		}
 	}
 	&:nth-of-type(4n+1){
-		background: url(../image/services-img1.jpg) center center / cover no-repeat;
+		background: url(../images/services-img1.jpg) center center / cover no-repeat;
 	}
 	&:nth-of-type(4n+3){
-		background: url(../image/services-img2.jpg) center center / cover no-repeat;
+		background: url(../images/services-img2.jpg) center center / cover no-repeat;
 	}
 }
 .achievements__count{
