--- a/assets/style/_article.scss
+++ b/assets/style/_article.scss
@@ -49,7 +49,7 @@ margin-left: 22px;
 				display: block;
 				width: 12px;
 				height: 12px;
-				background: url(../image/list-circle.svg) center center / cover no-repeat;
+				background: url(../images/list-circle.svg) center center / cover no-repeat;
 			}
 		}
 	}
