--- a/assets/style/_root.scss
+++ b/assets/style/_root.scss
@@ -128,8 +128,7 @@ h3 {
   &:hover {
     color: $--green;
 	background-color: $--white;
-	background-color: red;
-   & svg{
+   & svg path{
 	fill: $--green;
    }
   }
@@ -140,12 +139,7 @@ h3 {
     margin-bottom: 60px;
   }
 }
-.mb-s {
-  margin-bottom: 60px;
-  @media screen and (max-width: 767px) {
-    margin-bottom: 30px;
-  }
-}
+
 .menu {
   color: $--gray-text;
   & li {
@@ -471,6 +465,7 @@ h3 {
 	display: flex;
 	align-items: center;
 	margin-bottom: 10px;
+	transition: .3s ease;
 	&:before {
 	  content: "";
 	  width: 4px;
@@ -480,9 +475,8 @@ h3 {
 	  display: block;
 	  border-radius: 50%;
 	}
+	
   }
-
-
 
 .page-main {
   display: flex;
@@ -531,17 +525,17 @@ h3 {
 }
 @keyframes img-animate {
 	0%{
-		left: 0;
+		transform:translateX(0);
 	}
 	100%{
-		left: -60%;
+		transform: translateX(-60%);
 	}
 }
 @keyframes reverse-img-animate {
 	0%{
-		left: 0;
+		transform: translateX(0);
 	}
 	100%{
-		left: 60%;
+		transform: translateX(60%);
 	}
 }
