--- a/assets/style/_feature.scss
+++ b/assets/style/_feature.scss
@@ -20,6 +20,7 @@
 		position: absolute;
 		top: -17px;
 		left: calc(50% - 52px);
+		font-size: 20px;
 		&:before{
 			display: none;
 		}
@@ -45,6 +46,7 @@ border-bottom: 1px solid $--gray-text;
 	display: flex;
 	width: 25%;
 	position: relative;
+	align-items: center;
 	@media screen and (max-width:550px) {
 		width: 100%;
 	}
@@ -52,9 +54,10 @@ border-bottom: 1px solid $--gray-text;
 		border-radius: 50%;
 		max-width: 100px;
 		aspect-ratio: 1 / 1;
-		height: auto;
+		height: 100%;
 		object-fit: cover;
 		object-position: 50% 100%;
+		width: 100%;
 		@media screen and (max-width:550px) {
 			max-width: 80%;
 			min-width: 85px;
@@ -67,6 +70,9 @@ border-bottom: 1px solid $--gray-text;
 			margin-left: -10%;
 			z-index: 1;
 			border: 5px solid $--white;
+			border-right:none;
+			box-sizing: content-box;
+			
 			@media screen and (max-width:767px) {
 				margin-left: -25%;
 			}
