--- a/assets/style/_move.scss
+++ b/assets/style/_move.scss
@@ -33,6 +33,8 @@
 	& img {
 	  border-radius: 30px;
 	  aspect-ratio: 310 / 410;
+	  object-fit: cover;
+	//   object-position: 100% 50%;
 	}
 	&.odd img {
 	  transform: rotate(-2deg);
