--- a/assets/style/_vision.scss
+++ b/assets/style/_vision.scss
@@ -8,14 +8,22 @@
 	gap: 40px;
 	align-content: stretch;
 	margin-bottom: 40px;
-	&:nth-of-type(even){
-		flex-direction: row-reverse;
-		.vision__arrow{
-			& img{
-				transform: scale(-1, 1);
+	@media screen and (min-width:768px) {
+		&:nth-of-type(even){
+			flex-direction: row-reverse;
+			.vision__arrow{
+				& img{
+					transform: scale(-1, 1);
+				}
 			}
 		}
 	}
+	@media screen and (max-width:767px) {
+		flex-direction: column;
+		align-items: center;
+	}
+	
+
 }
 .vision__item{
 	display: flex;
@@ -29,9 +37,11 @@ height: auto;
 gap: 30px;
 @media screen and (max-width:1023px) {
 	width: calc((100% / 3) * 2 - 20px);;
+	
 }
 @media screen and (max-width:767px) {
 	padding: 20px;
+	width: 100%;
 }
 & img{
 	max-height: 240px;
@@ -62,7 +72,7 @@ text-transform:capitalize;
 			  top: 0;
 			  width: 20px;
 			  height: 20px;
-			  background: url("../image/quotation.svg") center center / cover
+			  background: url("../images/quotation.svg") center center / cover
 				no-repeat;
 			}
 			&:before {
@@ -82,16 +92,18 @@ text-transform:capitalize;
 	align-items: center;
 	justify-content: center;
 	@media screen and (max-width:1023px) {
-		width: 	calc((100% / 4) - 20px);
+		width: calc((100% / 3) - 20px);
+	}
+	@media screen and (max-width:767px) {
+		width: 100%;
+		max-width: 280px;
+		max-height: 280px;
 	}
 	& img{
 		max-width: 300px;
 		max-height: 300px;
 		width: 100%;
 		height: 100%;
-		// @media screen and (max-width:1023px) {
-		// 	max-width: 80%;
-		// max-height: 80%;
-		// }
+	
 	}
 }
