--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -36,7 +36,7 @@
       padding: 0 20px;
       .open & {
         left: 0;
-        align-items: flex-start;
+        align-items: center;
         gap: 30px;
         top: 76px;
         height: calc(100vh - 76px);
