--- a/assets/style/_about.scss
+++ b/assets/style/_about.scss
@@ -4,7 +4,7 @@
   align-content: stretch;
   gap: 40px;
   @media screen and (max-width: 1023px) {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 }
 .about__img {
@@ -14,12 +14,14 @@
   @media screen and (max-width: 1023px) {
     width: 100%;
 	max-height: 100%;
+	aspect-ratio: 1 / .5;
   }
   & img {
     height: 100%;
     max-width: 100%;
     object-fit: cover;
     border-radius: inherit;
+	aspect-ratio: 1 / 0.5;
   }
 }
 .about__content {
