--- a/assets/style/_contact.scss
+++ b/assets/style/_contact.scss
@@ -15,6 +15,9 @@
 		@media screen and (max-width:1023px) {
 			aspect-ratio: 1 / .5;
 		}
+		@media screen and (max-width:767px) {
+			aspect-ratio: 1;
+		}
 	}
 	& .contact__item{
 		width: 42%;
