--- a/assets/style/_feature.scss
+++ b/assets/style/_feature.scss
@@ -19,7 +19,7 @@
 	& .green{
 		position: absolute;
 		top: -17px;
-		left: calc(50% - 52px);
+		left: calc(50% - 35px);
 		font-size: 20px;
 		&:before{
 			display: none;
@@ -48,7 +48,7 @@ border-bottom: 1px solid $--gray-text;
 	position: relative;
 	align-items: center;
 	@media screen and (max-width:550px) {
-		width: 100%;
+		justify-content: center;
 	}
 	& img{
 		border-radius: 50%;
@@ -59,7 +59,7 @@ border-bottom: 1px solid $--gray-text;
 		object-position: 50% 100%;
 		width: 100%;
 		@media screen and (max-width:550px) {
-			max-width: 80%;
+			max-width: 100px;
 			min-width: 85px;
 		}
 		
