--- a/assets/style/_promo.scss
+++ b/assets/style/_promo.scss
@@ -34,9 +34,16 @@ position: relative;
 		width: 100%;
 		padding: 40px;
 	}
+	@media screen and (max-width:550px) {
+		
+		padding:20px;
+	}
 }
 .promo__title{
 	border-radius: 30px 30px 0 0;
+	@media screen and (max-width:767px) {
+		gap: 20px;
+	}
 }
 .promo__images{
 display: flex;
@@ -54,6 +61,7 @@ align-items: center;
 }
 }
 .promo__info{
+	
 	& p{
 	@include text-regular-m; 
 	}
