--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -137,9 +137,9 @@ h1 span {
   text-transform: none;
   font: inherit;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 767px) {
   h1 {
-    font-size: 28px;
+    font-size: 34px;
   }
 }
 
@@ -157,9 +157,9 @@ h2 span {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 767px) {
   h2 {
-    font-size: 24px;
+    font-size: 28px;
   }
 }
 
@@ -168,6 +168,11 @@ h3 {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+@media screen and (max-width: 767px) {
+  h3 {
+    font-size: 24px;
+  }
 }
 
 .title {
@@ -860,11 +865,24 @@ h3 {
   background-color: aliceblue;
   aspect-ratio: 310/410;
 }
+@media screen and (max-width: 767px) {
+  .move-slide {
+    max-width: 160px;
+    max-height: 210px;
+    aspect-ratio: 160/210;
+  }
+}
 .move-slide img {
   border-radius: 30px;
   aspect-ratio: 310/410;
   -o-object-fit: cover;
      object-fit: cover;
+  height: 100%;
+}
+@media screen and (max-width: 767px) {
+  .move-slide img {
+    aspect-ratio: 160/210;
+  }
 }
 .move-slide.odd img {
   transform: rotate(-2deg);
@@ -915,7 +933,7 @@ h3 {
   }
   .open .header__container nav {
     left: 0;
-    align-items: flex-start;
+    align-items: center;
     gap: 30px;
     top: 76px;
     height: calc(100vh - 76px);
@@ -1396,7 +1414,7 @@ h3 {
 }
 @media screen and (max-width: 1023px) {
   .about__container {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 }
 
@@ -1409,6 +1427,7 @@ h3 {
   .about__img {
     width: 100%;
     max-height: 100%;
+    aspect-ratio: 1/0.5;
   }
 }
 .about__img img {
@@ -1417,6 +1436,7 @@ h3 {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: inherit;
+  aspect-ratio: 1/0.5;
 }
 
 .about__content {
@@ -1474,6 +1494,11 @@ h3 {
   margin-bottom: 40px;
   align-items: center;
   text-wrap: balance;
+}
+@media screen and (max-width: 767px) {
+  .services__title {
+    align-items: flex-start;
+  }
 }
 
 .services__wrap {
@@ -1700,6 +1725,11 @@ h3 {
   object-fit: cover;
   -o-object-position: 100% 20%;
      object-position: 100% 20%;
+}
+@media screen and (max-width: 550px) {
+  .news__link img {
+    max-height: 180px;
+  }
 }
 
 .news__item_bottom {
@@ -2236,7 +2266,7 @@ h3 {
 .feature__item .green {
   position: absolute;
   top: -17px;
-  left: calc(50% - 52px);
+  left: calc(50% - 35px);
   font-size: 20px;
 }
 .feature__item .green:before {
@@ -2270,7 +2300,7 @@ h3 {
 }
 @media screen and (max-width: 550px) {
   .feature__item_images {
-    width: 100%;
+    justify-content: center;
   }
 }
 .feature__item_images img {
@@ -2286,7 +2316,7 @@ h3 {
 }
 @media screen and (max-width: 550px) {
   .feature__item_images img {
-    max-width: 80%;
+    max-width: 100px;
     min-width: 85px;
   }
 }
@@ -2346,6 +2376,11 @@ h3 {
 @media screen and (max-width: 1023px) {
   .contact__map iframe {
     aspect-ratio: 1/0.5;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contact__map iframe {
+    aspect-ratio: 1;
   }
 }
 .contact__map .contact__item {
@@ -2524,6 +2559,11 @@ h3 {
 @media screen and (max-width: 767px) {
   .book__container {
     flex-direction: column;
+  }
+}
+@media screen and (max-width: 550px) {
+  .book__container {
+    gap: 20px;
   }
 }
 .book__container form {
@@ -2867,9 +2907,20 @@ h3 {
     padding: 40px;
   }
 }
+@media screen and (max-width: 550px) {
+  .promo__title,
+  .promo__info {
+    padding: 20px;
+  }
+}
 
 .promo__title {
   border-radius: 30px 30px 0 0;
+}
+@media screen and (max-width: 767px) {
+  .promo__title {
+    gap: 20px;
+  }
 }
 
 .promo__images {
