added style for slider

--- a/assets/style/_vision.scss
+++ b/assets/style/_vision.scss
@@ -50,6 +50,7 @@ gap: 30px;
 	height: 100%;
 	aspect-ratio: 1 / .5;
 	filter: grayscale(100%);
+	object-position: 100% 25%;
 }
 .vision__item_content{
 	display: flex;
